--- a/video_app/package.json
+++ b/video_app/package.json
@@ -35,23 +35,25 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.9.1",
     "react-native-video-player": "^0.15.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.12.5"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.3.0",
     "expo-module-scripts": "^4.0.3",
